Tùng hoàn thành nhiệm vụ

--- a/DAWEB2/DAWEB2.csproj
+++ b/DAWEB2/DAWEB2.csproj
@@ -595,6 +595,7 @@
     <Content Include="Views\Admin\QLPhanQuyen.cshtml" />
     <Content Include="Views\Admin\PQuyen.cshtml" />
     <Content Include="Views\Admin\SuaQuyen.cshtml" />
+    <Content Include="Views\TrangChu\TrangXemNhieu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
